# imageTraining_py

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
src/imageTraining/: image_training.py
src/slapping/: imageTraining.py  slap_that_like_button.py
tests/: test_slapping.py
