[metadata]
name = imageTraining
description = Image generator for ML training
author = Tim Herrin
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    imageTraining
install_requires =
    argparse>=1.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
imageTraining = py.typed

[flake8]
max-line-length = 160